# guanbi-automation

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
docs/archive/: decision-log.md
docs/plans/: 2026-03-18-guanbi-feishu-pipeline-design.md  2026-03-19-from-scratch-guanbi-automation-implementation-plan.md  2026-03-19-guanbi-automation-implementation-plan.md  2026-03-19-guanbi-automation-suite-design.md  2026-03-19-guanbi-live-verification.md  2026-03-19-legacy-script-audit.md  2026-03-19-runtime-contract-and-stage-gating-design.md  2026-03-19-runtime-contract-implementation-plan.md  2026-03-20-extract-runtime-policy-design.md  2026-03-20-extract-runtime-policy-implementation-plan.md  2026-03-21-publish-stage-detailed-design.md  2026-03-21-publish-stage-implementation-plan.md  2026-03-21-workbook-detailed-design.md  2026-03-21-workbook-stage-implementation-plan.md  2026-03-22-mainline-validation-governance-design.md  2026-03-22-publish-live-verification-design.md  2026-03-22-publish-live-verification-implementation-plan.md  2026-03-22-repository-state-and-recovery-design.md  2026-03-23-mainline-publish-runtime-consumer-design.md  2026-03-23-mainline-publish-runtime-consumer-implementation-plan.md  2026-03-23-publish-hardening-design.md  2026-03-23-publish-hardening-implementation-plan.md  2026-03-23-validation-branch-promotion-sweep-plan.md  master-implementation-roadmap.md  master-system-design.md
guanbi_automation/: __init__.py
guanbi_automation/application/: __init__.py  doctor_service.py  live_verification_spec.py  preflight_service.py  (+4 more)
(+106 files in other folders)
